--- a/translations/el/info/task_description.html
+++ b/translations/el/info/task_description.html
@@ -1,6 +1,11 @@
 ﻿<div style="text-align: center">
     <img src="{{MEDIA}}title.png" style="max-height: 350px">
 </div>
+
+<p>
+<strong>This translation should be updated. See the English version.</strong>
+</p>
+
 <p>
     Σου δίνεται ένα κείμενο, που περιέχει διάφορα γράμματα στα αγγλικά καθώς και σημεία στίξης.
     Πρέπει να βρεις το γράμμα που εμφανίζεται τις περισσότερες φορές στο κείμενο. Το αποτέλεσμα που θα επιστρέψεις πρέπει να είναι σε μορφή πεζού γράμματος.
@@ -29,23 +34,23 @@
     <p>
         <strong>Παράδειγμα:</strong>
     </p>
-    <pre class="brush: python">
 {% if interpreter.slug == "js-node" %}
-mostWanted("Hello World!") == "l"
-mostWanted("How do you do?") == "o"
-mostWanted("One") == "e"
-mostWanted("Oops!") == "o"
-mostWanted("AAaooo!!!!") == "a"
-mostWanted("abe") == "a"
-{% else %}
-checkio("Hello World!") == "l"
-checkio("How do you do?") == "o"
-checkio("One") == "e"
-checkio("Oops!") == "o"
-checkio("AAaooo!!!!") == "a"
-checkio("abe") == "a"
-{% endif %}
-</pre>
+  <pre class="brush: javascript">
+mostWanted("Hello World!") == ["l"]
+mostWanted("How do you do?") == ["o"]
+mostWanted("One") == ["o", "n", "e"]
+mostWanted("Oops!") == ["o"]
+mostWanted("AAaooo!!!!") == ["a", "o"]
+mostWanted("abe") == ["a", "b", "e"]</pre>
+  {% else %}
+  <pre class="brush: python">
+most_wanted("Hello World!") == ["l"]
+most_wanted("How do you do?") == ["o"]
+most_wanted("One") == ["o", "n", "e"]
+most_wanted("Oops!") == ["o"]
+most_wanted("AAaooo!!!!") == ["a", "o"]
+most_wanted("abe") == ["a", "b", "e"]</pre>
+  {% endif %}
 </div>
 
 <p class="for_info_only">
