--- a/translations/fr/info/task_description.html
+++ b/translations/fr/info/task_description.html
@@ -1,6 +1,11 @@
 <div style="text-align: center">
     <img src="{{MEDIA}}title.png" style="max-height: 350px">
 </div>
+
+<p>
+<strong>This translation should be updated. See the English version.</strong>
+</p>
+
 <p>
 Dans un texte en anglais, qui contient des lettres et des signes de ponctuation, il faut déterminer la lettre la plus
 fréquente. La lettre renvoyée doit être en casse minuscule.<br>
@@ -24,23 +29,23 @@ Par exemple -- "one" contient "o", "n", "e" une fois chacun, donc on choisit de 
 <p>
 <strong>Example:</strong>
 </p>
-<pre class="brush: python">
 {% if interpreter.slug == "js-node" %}
-mostWanted("Hello World!") == "l"
-mostWanted("How do you do?") == "o"
-mostWanted("One") == "e"
-mostWanted("Oops!") == "o"
-mostWanted("AAaooo!!!!") == "a"
-mostWanted("abe") == "a"
-{% else %}
-checkio("Hello World!") == "l"
-checkio("How do you do?") == "o"
-checkio("One") == "e"
-checkio("Oops!") == "o"
-checkio("AAaooo!!!!") == "a"
-checkio("abe") == "a"
-{% endif %}
-</pre>
+  <pre class="brush: javascript">
+mostWanted("Hello World!") == ["l"]
+mostWanted("How do you do?") == ["o"]
+mostWanted("One") == ["o", "n", "e"]
+mostWanted("Oops!") == ["o"]
+mostWanted("AAaooo!!!!") == ["a", "o"]
+mostWanted("abe") == ["a", "b", "e"]</pre>
+  {% else %}
+  <pre class="brush: python">
+most_wanted("Hello World!") == ["l"]
+most_wanted("How do you do?") == ["o"]
+most_wanted("One") == ["o", "n", "e"]
+most_wanted("Oops!") == ["o"]
+most_wanted("AAaooo!!!!") == ["a", "o"]
+most_wanted("abe") == ["a", "b", "e"]</pre>
+  {% endif %}
 </div>
 <p class="for_info_only">
 <strong>Utilisation: </strong>
