--- a/translations/ru/info/task_description.html
+++ b/translations/ru/info/task_description.html
@@ -9,8 +9,8 @@
 </p>
 <p>
     Если в тексте <strong>две и больше буквы с одинаковой частотой</strong>,
-    тогда результатом будет буква, которая идет первой в алфавите.
-    Для примера, "one" содержит "o", "n", "e" по одному разу, так что мы выбираем "e".
+    верните список со всеми этими буквами.
+    Для примера, в тексте "Hello, Evan" буквы "e" и "l" встречаются по 2 раза, так что ответом будет ["e", "l"].
 </p>
 
 
@@ -19,30 +19,30 @@
 </p>
 
 <p>
-    <strong>Вых. данные: </strong> Наиболее частая буква, как строка.
+    <strong>Вых. данные: </strong> Список наиболее частых букв.
 </p>
 
 <div class="for_info_only">
     <p>
         <strong>Примеры:</strong>
     </p>
-    <pre class="brush: python">
 {% if interpreter.slug == "js-node" %}
-mostWanted("Hello World!") == "l"
-mostWanted("How do you do?") == "o"
-mostWanted("One") == "e"
-mostWanted("Oops!") == "o"
-mostWanted("AAaooo!!!!") == "a"
-mostWanted("abe") == "a"
-{% else %}
-checkio("Hello World!") == "l"
-checkio("How do you do?") == "o"
-checkio("One") == "e"
-checkio("Oops!") == "o"
-checkio("AAaooo!!!!") == "a"
-checkio("abe") == "a"
-{% endif %}
-</pre>
+  <pre class="brush: javascript">
+mostWanted("Hello World!") == ["l"]
+mostWanted("How do you do?") == ["o"]
+mostWanted("One") == ["o", "n", "e"]
+mostWanted("Oops!") == ["o"]
+mostWanted("AAaooo!!!!") == ["a", "o"]
+mostWanted("abe") == ["a", "b", "e"]</pre>
+  {% else %}
+  <pre class="brush: python">
+most_wanted("Hello World!") == ["l"]
+most_wanted("How do you do?") == ["o"]
+most_wanted("One") == ["o", "n", "e"]
+most_wanted("Oops!") == ["o"]
+most_wanted("AAaooo!!!!") == ["a", "o"]
+most_wanted("abe") == ["a", "b", "e"]</pre>
+  {% endif %}
 </div>
 
 <p class="for_info_only">
