--- a/translations/uk/info/task_description.html
+++ b/translations/uk/info/task_description.html
@@ -9,9 +9,9 @@
     що ви не підраховуєте знаки пунктуації, цифри та пропуски, а тільки букви.
 </p>
 <p>
-    Якщо в тексті <strong>дві чи більше букв з однаковою частотою</strong>, тоді
-    результатом буде буква, яка зустрічається першою в алфавіті. Наприклад, 
-    «one» містить «o», «n», «e» по одному разу, тому ми вибираємо букву «e».
+    Якщо в тексті <strong>дві чи більше букв з однаковою частотою</strong>, поверніть
+    список з усіма такими буквами. Наприклад, 
+    «Hello, Evan» повинен повернути в результаті ['e', 'l'].
 </p>
 
 
@@ -20,7 +20,7 @@
 </p>
 
 <p>
-    <strong>Вихідні дані: </strong> Найбільш уживана буква у вигляді рядка.
+    <strong>Вихідні дані: </strong> Список найбільш уживаних букв.
 </p>
 
 <div class="for_info_only">
@@ -29,21 +29,22 @@
     </p>
     <pre class="brush: python">
 {% if interpreter.slug == "js-node" %}
-mostWanted("Hello World!") == "l"
-mostWanted("How do you do?") == "o"
-mostWanted("One") == "e"
-mostWanted("Oops!") == "o"
-mostWanted("AAaooo!!!!") == "a"
-mostWanted("abe") == "a"
-{% else %}
-checkio("Hello World!") == "l"
-checkio("How do you do?") == "o"
-checkio("One") == "e"
-checkio("Oops!") == "o"
-checkio("AAaooo!!!!") == "a"
-checkio("abe") == "a"
-{% endif %}
-</pre>
+  <pre class="brush: javascript">
+mostWanted("Hello World!") == ["l"]
+mostWanted("How do you do?") == ["o"]
+mostWanted("One") == ["o", "n", "e"]
+mostWanted("Oops!") == ["o"]
+mostWanted("AAaooo!!!!") == ["a", "o"]
+mostWanted("abe") == ["a", "b", "e"]</pre>
+  {% else %}
+  <pre class="brush: python">
+most_wanted("Hello World!") == ["l"]
+most_wanted("How do you do?") == ["o"]
+most_wanted("One") == ["o", "n", "e"]
+most_wanted("Oops!") == ["o"]
+most_wanted("AAaooo!!!!") == ["a", "o"]
+most_wanted("abe") == ["a", "b", "e"]</pre>
+  {% endif %}
 </div>
 
 <p class="for_info_only">
