add short description into translations

--- a/translations/zh-hans/info/task_description.html
+++ b/translations/zh-hans/info/task_description.html
@@ -3,9 +3,8 @@
 </div>
 
 <p>
-<strong>This translation should be updated. See the English version.</strong>
+<strong>This translation should be updated, because the mission has changed: the solution should return not only the one letter, but the list of all letters which are the 'most wanted'. See the English version for more details.</strong>
 </p>
-
 
 <p>
     给你一段文本，其中包含不同的英文字母和标点符号。
