--- a/translations/es/info/task_description.html
+++ b/translations/es/info/task_description.html
@@ -3,7 +3,7 @@
 </div>
 
 <p>
-<strong>This translation should be updated. See the English version.</strong>
+<strong>This translation should be updated, because the mission has changed: the solution should return not only the one letter, but the list of all letters which are the 'most wanted'. See the English version for more details.</strong>
 </p>
 
 <p>
