--- a/info/task_description.html
+++ b/info/task_description.html
@@ -2,15 +2,15 @@
     <img src="{{MEDIA}}title.png" style="max-height: 350px">
 </div>
 <p>
-    You are given a text, which contains different english letters and punctuation symbols.
-    You should find the most frequent letter in the text. The letter returned must be in lower case.<br>
-    While checking for the most wanted letter, casing does not matter, so for the purpose of your search,
+    You are given a text, which contains different English letters and punctuation marks.
+    You should find the most frequent letter in the text. The letter returned must be in lowercase.<br>
+    During the search for the most wanted letter, casing doesn’t matter,
     "A"&nbsp;==&nbsp;"a".
-    Make sure you do not count punctuation symbols, digits and whitespaces, only letters.
+    Make sure you don’t count in the punctuation marks, digits and whitespaces, just letters.
 </p>
 <p>
-    If you have <strong>two or more letters with the same frequency</strong>,
-    then return all of them as the list.
+    If you have <strong>two or more letters occurring the same number of times</strong>,
+    then return all of them as a list.
     For example -- "Hello, Evan" should return ['e', 'l'].
 </p>
 
@@ -20,7 +20,7 @@
 </p>
 
 <p>
-    <strong>Output: </strong> The list of the most frequent letters in lower case.
+    <strong>Output: </strong> The list of the most frequent letters in lowercase.
 </p>
 
 <div class="for_info_only">
@@ -48,9 +48,9 @@ most_wanted("abe") == ["a", "b", "e"]</pre>
 
 <p class="for_info_only">
     <strong>How it is used: </strong>
-    For most decryption tasks you need to know the frequency of occurrence for various letters in a section of text.
+    For most decryption tasks you need to know the occurrence frequency of various letters in a section of text.
     For example: we can easily crack a simple addition or substitution cipher if we know the frequency in which letters appear.
-    This is interesting stuff for language experts!
+    It’s pretty interesting stuff for language experts!
 </p>
 
 
@@ -65,3 +65,5 @@ most_wanted("abe") == ["a", "b", "e"]</pre>
     <iframe width="560" height="315" src="//www.youtube.com/embed/yJUA5qN898E" frameborder="0" allowfullscreen></iframe>
 </p>
 -->
+
+
